# SK_Rookies_homework_LangChain

./: pyproject.toml
src/mylangchain_app/Langchain_homework/: Q_1-1.ipynb  Q_1-2.ipynb  Q_1-3.ipynb  Q_2-1.ipynb  Q_2-2.ipynb  Q_2-3.ipynb  Q_2-4.ipynb  Q_3-1.ipynb  Q_4-1.ipynb  Q_4-2.ipynb
src/mylangchain_app/Langchain_homework/db/cafe_db/: index.faiss  index.pkl
src/mylangchain_app/Langchain_homework/db/cafe_db_upstage/: index.faiss  index.pkl
