[project]
name = "mylangchain-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "gradio (>=5.46.0,<6.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "langchain-ollama (>=0.3.8,<0.4.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "pypdf (>=4.2.0,<5.0.0)",
    "langchain-upstage (>=0.7.3,<0.8.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"